--- a/output/authors.html
+++ b/output/authors.html
@@ -4,7 +4,7 @@
 <!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>/bin/blog/ekinertac - Tags</title>
+  <title>/bin/blog/ekinertac - Authors</title>
   <meta name="author" content="Ekin Ertaç">
 
 
@@ -43,8 +43,10 @@
 </ul></nav>
   <div id="main">
     <div id="content">
-    <h1>Tags for /bin/blog/ekinertac</h1>        <li><a href="http://ekinertac.com/tag/sublime-text.html">sublime text</a> (1)</li>
-        <li><a href="http://ekinertac.com/tag/text-editor.html">text editor</a> (1)</li>
+    <h1>Authors on /bin/blog/ekinertac</h1>
+
+    <ul>        <li><a href="http://ekinertac.com/author/ekinertac.html">ekinertac</a> (1)</li>
+    </ul>
 <aside class="sidebar">
   <section>
     <h1>Recent Posts</h1>
