--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
         <h2>
             <span class="name">ekinertac</span><span class="at">@</span><span class="host">iMac-local</span>:<span class="prompt">~/Projects/website $</span></span> whoami
         </h2>
-
+        <div class="col-sm-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, recusandae consequuntur dolor. Porro cupiditate, possimus neque aspernatur veritatis excepturi, delectus maxime rerum autem repellendus, eaque. Dolorum, excepturi <a href="#">laborum</a> ipsa perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis in voluptatibus atque eius, quia, iusto nulla labore eaque animi recusandae unde! Facere minus a
         <a href="#">officia</a> aliquid porro ipsam fugit eius.</p>
+        </div>
+
 
     </div>
 </div>
@@ -162,9 +164,13 @@
         <h2>
             <span class="name">ekinertac</span><span class="at">@</span><span class="host">iMac-local</span>:<span class="prompt">~/Projects/website $</span></span> cat contact.md
         </h2>
+        <div class="row">
+            <div class="col-sm-8">
+                <p>I'm currently looking for remote or freelance based work, so if you're a cool startup looking for an always curious passionate dev,
+                ping me on <a href="http://twitter.com/ekinertac">Twitter</a> or you can get in touch via <a href="mailto:ekinertac@gmail.com">E-mail</a></p>
+            </div>
+        </div>
 
-        <p>I'm currently looking for remote or freelance based work, so if you're a cool startup looking for an always curious passionate dev,
-        ping me on <a href="http://twitter.com/ekinertac">Twitter</a> or you can get in touch via <a href="mailto:ekinertac@gmail.com">E-mail</a></p>
     </div>
 </div>
 
