--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
             <span class="name">ekinertac</span><span class="at">@</span><span class="host">iMac-local</span>:<span class="prompt">~/Projects/website $</span></span> whoami
         </h2>
         <div class="col-sm-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, recusandae consequuntur dolor. Porro cupiditate, possimus neque aspernatur veritatis excepturi, delectus maxime rerum autem repellendus, eaque. Dolorum, excepturi <a href="#">laborum</a> ipsa perspiciatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis in voluptatibus atque eius, quia, iusto nulla labore eaque animi recusandae unde! Facere minus a
-        <a href="#">officia</a> aliquid porro ipsam fugit eius.</p>
+
+
+        Ekin is a talented and passionate full-stack software developer focused mainly on back-end and API development projects. With almost a decade of experience in freelance and other programming projects, he is responsible and eager to work, always interested in challenging himself and learning new technologies. Coming from a start-up environment, he strives to be result-oriented and quality-driven.
+
+
         </div>
 
 
