--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         li { list-style: none; }
         li > span { color: #B295FC; }
 
+        p { margin: 0; padding: 0; }
     </style>
 
 </head>
@@ -43,18 +44,11 @@
 
 <div class="row">
     <div class="col-sm-10">
-
         <h2>
-            <span class="name">ekinertac</span><span class="at">@</span><span class="host">iMac-local</span>:<span class="prompt">~/Projects/website $</span></span> whoami
+            <span class="name">ekinertac</span><span class="at">@</span><span class="host">iMac-local</span>:<span class="prompt">~/Projects/website $</span></span> cat about.md
         </h2>
-        <div class="col-sm-8">
 
-
-        Ekin is a talented and passionate full-stack software developer focused mainly on back-end and API development projects. With almost a decade of experience in freelance and other programming projects, he is responsible and eager to work, always interested in challenging himself and learning new technologies. Coming from a start-up environment, he strives to be result-oriented and quality-driven.
-
-
-        </div>
-
+        <p>Ekin is a talented and passionate full-stack software developer focused mainly on back-end and API development projects. With almost a decade of experience in freelance and other programming projects, he is responsible and eager to work, always interested in challenging himself and learning new technologies. Coming from a start-up environment, he strives to be result-oriented and quality-driven.</p>
 
     </div>
 </div>
